# work_test

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: db.sqlite3
app/app/: settings.py  urls.py
app/ticker/: models.py  ticker_init.py  views.py
app/ticker/migrations/: 0001_initial.py
app/ticker/templates/ticker/: requests.html
console_ticker/: main.py
